Fixed Item delete, search implemented
